[tool.poetry]
name = "pgadmin4-poetry"
version = "0.1.0"
description = ""
authors = ["masajinobe-ef <priscilla.effects@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.*"
Flask-Login = "0.*"
Flask-Mail = "0.*"
Flask-Migrate = "4.*"
Flask-SQLAlchemy = "3.1.*"
Flask-WTF = "1.2.*"
Flask-Compress = "1.*"
Flask-Paranoid = "0.*"
Flask-Babel = "4.0.*"
Flask-Security-Too = { version = "5.5.*", python = ">=3.10" }
Flask-SocketIO = "5.3.*"
WTForms = "3.1.*"
passlib = "1.*"
pytz = "2024.*"
speaklater3 = "1.*"
sqlparse = "0.*"
psutil = "6.0.*"
psycopg = { version = "3.2.1", extras = ["c"] }
python-dateutil = "2.*"
SQLAlchemy = "2.*"
bcrypt = "4.2.*"
cryptography = "43.0.*"
sshtunnel = "0.*"
ldap3 = "2.*"
gssapi = "1.8.*"
eventlet = "0.36.1"
user-agents = "2.2.0"
pywinpty = { version = "2.0.*", markers = "sys_platform == 'win32'" }
Authlib = "1.3.*"
pyotp = "2.*"
qrcode = "7.*"
boto3 = "1.34.*"
urllib3 = "1.26.*"
azure-mgmt-rdbms = "10.1.0"
azure-mgmt-resource = "23.1.1"
azure-mgmt-subscription = "3.1.1"
azure-identity = "1.17.1"
google-api-python-client = "2.*"
google-auth-oauthlib = "1.2.1"
keyring = "24.*"
Werkzeug = "3.0.*"
typer = { version = "0.12.*", extras = ["all"] }
setuptools = { version = "71.*", markers = "python_version >= '3.12'" }
jsonformatter = "~=0.3.2"
libgravatar = "1.0.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
